# utahcpp-project-template

./: .clang-format  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
.github/workflows/: cmake.yml
cmake/: target_folder.cmake
libs/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test.cpp
tools/: CMakeLists.txt  main.cpp
